--- a/client/src/styles/movieInfo.css
+++ b/client/src/styles/movieInfo.css
@@ -1,3 +1,26 @@
 img {
-  width: 100vw;
+  width: 30vw;
+}
+
+.movieInfo {
+  padding: 30px;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: left;
+  width: 100%;
+}
+
+.buttons button {
+  margin: 10px;
 }
